fixed display on mobile and added value boundary for levels

--- a/index.css
+++ b/index.css
@@ -5,6 +5,9 @@ body {
 label {
 	font-weight: normal;
 }
+.form-group { 
+	display: inline-block; 
+}
 .form-inline {
 	padding-left: 10px;
 }
